--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^12.0.0-alpha.1",
     "lucide": "^0.456.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
